istio/istio_gateway_values.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: app-gateway
  namespace: istio-system


spec:

 selector:

   istio: ingressgateway


 servers:

 - port:

     number: 80
     name: http
     protocol: HTTP

   hosts:
   - "*"
