istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: nginx-route
  namespace: default


spec:

  hosts:
  - "*"


  gateways:
  - istio-system/app-gateway


  http:

  - match:

    - uri:
        prefix: /


    route:

    - destination:

        host: nginx-service.default.svc.cluster.local

        port:
          number: 80
